support Catalyst if-and-only-if use host-allocated array

--- a/cuda/solutions/diffusion/CMakeLists.txt
+++ b/cuda/solutions/diffusion/CMakeLists.txt
@@ -16,15 +16,7 @@ set(CUDA_SRCS
 include_directories(../include)
 
 add_executable(diffusion2d ${CUDA_SRCS})
-set_target_properties(diffusion2d PROPERTIES CUDA_ARCHITECTURES "75")
-
-#include(FindCUDA/select_compute_arch)
-#CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
-#string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
-#string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
-#string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-#SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
-#set_property(GLOBAL PROPERTY CUDA_ARCHITECTURES "${CUDA_ARCH_LIST}")
+set_target_properties(diffusion2d PROPERTIES CUDA_ARCHITECTURES "60;75;86")
 
 set(INSITU None CACHE STRING "Enable in-situ support")
 set_property(CACHE INSITU PROPERTY STRINGS None Catalyst Ascent)
@@ -33,17 +25,14 @@ set(CMAKE_CUDA_FLAGS_RELEASE "-O3 -DNDEBUG -I/opt/nvidia/hpc_sdk/Linux_x86_64/21
 set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/math_libs/11.2/lib64")
 
 if(INSITU STREQUAL "None")
-  add_executable(diffusion2d ${CUDA_SRCS})
-#  target_compile_options(miniapp PRIVATE "${CRAY_HPC_SDK_INCLUDE_OPTS}")
   target_link_libraries(diffusion2d PRIVATE cublas )
 elseif(INSITU STREQUAL "Catalyst")
-	add_executable(diffusion2d ${CUDA_SRCS} CatalystAdaptor.cu)
-  find_package(catalyst REQUIRED PATHS "${EBROOTCATALYST}/lib/cmake/catalyst-2.0")
-  target_compile_definitions(miniapp PUBLIC USE_CATALYST=1)
-  target_link_libraries(diffusion2d PRIVATE cublas  catalyst::catalyst)
+  find_package(catalyst 2.0 REQUIRED PATHS "${EBROOTCATALYST}/lib/cmake/catalyst-2.0")
+  target_compile_definitions(diffusion2d PUBLIC USE_CATALYST=1)
+  target_link_libraries(diffusion2d PRIVATE cublas catalyst::catalyst)
 elseif(INSITU STREQUAL "Ascent")
   find_package(Ascent REQUIRED PATHS "/apps/daint/UES/Ascent/ascent-install/lib/cmake/ascent")
   #  target_compile_options(miniapp PRIVATE ${CRAY_HPC_SDK_INCLUDE_OPTS})
   target_compile_definitions(diffusion2d PRIVATE USE_ASCENT=1)
-  target_link_libraries(diffusion2d PRIVATE cublas  ascent::ascent )
+  target_link_libraries(diffusion2d PRIVATE cublas ascent::ascent )
 endif()
